Added new pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,38 @@
     <title>Dusan Coko Portfolio</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <h1>Dusan Coko</h1>
+        <h2>MSc of Engineering (ili profesionalno zvanje)</h2>
+    </header>
+    <!-- Istaknuti meni -->
+    <nav>
+        <a href="#">Portfolio in English</a>
+        <a href="index_rs.html">Portfolio in Serbian</a>
+        <!-- Portfolio i na drugim jezicima -->
+        <a href="projects.html">Public projects</a>
+    </nav>
+    <main>
+        <!-- Reprezentativna slika -->
+        <!-- Osnovni podaci (ime, prezime) --> 
+        <!-- Osnovni podaci (email) --> 
+        <!-- Osnovni podaci (Social - LinkedIn, Instgram etc.) -->
+        <!-- Osnovni podaci (Drzava, Grad) -->
+        <!-- Osnovni (opcioni) podaci (datum rodjenja, pol) -->
+        
+        <h2>Work experience</h2>
+        <!-- Pozicija, vreme zaposlenja od-do, zaduzenja (kratko, koncizno) --> 
+    
+        <h2>Education and skills</h2>
+        <h3>Education</h3>
+        <!-- Visoko obrazovanje (fakultet, visoka/visa skola) -->
+        <!-- Srednja skola -->
+        <!-- Kursevi -->
+        <h3>Skills</h3>
+        <h4>Languages</h4>
+        <!-- Podaci za jezike -->
+        <h4>Computer skills</h4>
+        <!-- I sve ostale skillove treba klasifikovati (Europass) -->
+    </main>
 </body>
 </html>
